Update to be able to deploy on github pages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<div id="form-container"></div>
+<html>
+
+<head>
+    <title>JS Form Builder</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./form.css" type="text/css"/>
+</head>
+
+<body>
+
+    <div id="form-container"></div>
+    
+
+    <script src="./validators.js"></script>
+    <script src="./form.js"></script>
+    <script src="./demo.js"></script>
+</body>
+
+</html>
